--- a/DESAFIO HTML CSS/index.html
+++ b/DESAFIO HTML CSS/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <header class="container">
-        <div class="logo"><img src="imagens/logo_colorida.png" alt="Diamond Solutions"></div>
+        <div class="logo"><img src="imagens/logo_colorida.png" width="500px" alt="Diamond Solutions"></div>
     </header>
 
     <article class="navegacao">
@@ -29,43 +29,46 @@
         <div class="container-textos">
             <div class="texto">
                 <h1>QUEM SOMOS</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ipsa suscipit id molestias soluta cum? Pariatur nulla laboriosam, vero odio est adipisci corporis eveniet ipsum, et quidem non, accusantium rerum!</p>
+                <p>LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT. QUOD IPSA SUSCIPIT ID MOLESTIAS SOLUTA CUM? PARIATUR NULLA
+                LABORIOSAM, VERO ODIO EST ADIPISCI CORPORIS EVENIET IPSUM, ET QUIDEM NON, ACCUSANTIUM RERUM! LOREM IPSUM DOLOR SIT AMET, CONSECTETUR ADIPISICING ELIT. QUAM, QUIBUSDAM NIHIL. CORPORIS ADIPISCI POSSIMUS NOSTRUM LIBERO SUNT ODIO. CORPORIS VERITATIS CONSEQUUNTUR EX QUAERAT QUOS NUMQUAM IPSAM! FACERE AD TOTAM ASPERNATUR.</p>
             </div>
 
             <div class="texto">
                 <h1>NOSSA HISTÓRIA</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod ipsa suscipit id molestias soluta cum? Pariatur nulla laboriosam, vero odio est adipisci corporis eveniet ipsum, et quidem non, accusantium rerum!</p>
+                <p>LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT. QUOD IPSA SUSCIPIT ID MOLESTIAS SOLUTA CUM? PARIATUR NULLA LABORIOSAM, VERO ODIO EST ADIPISCI CORPORIS EVENIET IPSUM, ET QUIDEM NON, ACCUSANTIUM RERUM! LOREM IPSUM DOLOR SIT AMET CONSECTETUR ADIPISICING ELIT. REPUDIANDAE LABORIOSAM ENIM PRAESENTIUM NECESSITATIBUS IPSUM VITAE PARIATUR CORRUPTI, DOLORE ILLUM FUGIAT VOLUPTATUM ERROR ELIGENDI REPELLAT QUIS MAXIME UT BLANDITIIS NUMQUAM ULLAM.</p>
             </div>
         </div>
 
     </article>
 
-    <article class="nossos-servicos">
+    <article class="servicos">
         <h1>NOSSOS SERVIÇOS</h1>
-        <div class="container-botoes">
-            <button class="botao-servicos">
-                <img src="imagens/bi.png" alt="Business Intelligence">
-                <h2>BUSINESS INTELLIGENCE</h2>
-            </button>
-            <button class="botao-servicos">
-                <img src="imagens/soft.png" alt="Software">
-                <h2>SOFTWARE</h2>
-            </button>
-            <button class="botao-servicos">
-                <img src="imagens/mobile.png" alt="Mobile">
-                <h2>MOBILE</h2>
-            </button>
-            <button class="botao-servicos">
-                <img src="imagens/cons.png" alt="Consultoria">
-                <h2>CONSULTORIA</h2>
-            </button>
-        </div>
+        <div class="nossos-servicos">
+            <div class="container-botoes">
+                <button class="botao-servicos">
+                    <img src="imagens/01.png" alt="Business Intelligence" width="150px">
+                    BUSINESS INTELLIGENCE
+                </button>
+                <button class="botao-servicos">
+                    <img src="imagens/02.png" alt="Software" width="150px">
+                    SOFTWARE
+                </button>
+                <button class="botao-servicos">
+                    <img src="imagens/03.png" alt="Mobile" width="150px">
+                    MOBILE
+                </button>
+                <button class="botao-servicos">
+                    <img src="imagens/04.png" alt="Consultoria" width="150px">
+                    CONSULTORIA
+                </button>
+            </div>
+        </div>  
         
     </article>
 
     <footer class="footer">
         <div class="container-footer">
-            <img src="imagens/logo-diamante.png" alt="Diamond Solutions">
+            <img src="imagens/logo_symbol_branco.png" alt="Diamond Solutions" width="100px">
 
             <div class="mapa-site">
                 <h2>MAPA DO SITE</h2>
@@ -80,9 +83,9 @@
             <div class="redes">
                 <h2>NOSSAS REDES</h2>
                 <div class="icones-redes">
-                    <img src="imagens/insta.png" alt="Instagram">
-                    <img src="imagens/face.png" alt="Facebook">
-                    <img src="imagens/twitter.png" alt="Twitter">
+                    <img src="imagens/insta.png" alt="Instagram" width="30px">
+                    <img src="imagens/face.png" alt="Facebook" width="30px">
+                    <img src="imagens/tw.png" alt="Twitter" width="20px">
                 </div>
             </div>
         </div>
